# exqudens-cpp-xerces

./: CMakeLists.txt  CMakePresets.json  conanfile.py  name-version.txt  readme.md
src/main/cpp/: main.cpp
src/main/cpp/exqudens/xerces/: Application.cpp  Application.hpp  Convertor.hpp  Service.cpp  Service.hpp  ThreadPool.cpp  ThreadPool.hpp  Unit.hpp  Utils.cpp  Utils.hpp  XmlToJsonConvertor.cpp  XmlToJsonConvertor.hpp  macros.hpp
src/test/cpp/: OtherTests.hpp  TestApplication.cpp  TestApplication.hpp  TestConfiguration.cpp  TestConfiguration.hpp  TestMacros.hpp  TestUtils.hpp  main.cpp
src/test/cpp/exqudens/xerces/: ConvertorTests.hpp  UtilsTests.hpp
